Reports tab is no longer hidden under search tab

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -552,9 +552,9 @@ a.bold:visited {
   text-decoration: none;
   font-weight: 700;
   font-size: 1.2em;
-  letter-spacing: -0.03em;
+  letter-spacing: -0.04em;
   color: @lightgreen;
-  margin-right: 5px;
+  margin-right: -2px;
   text-shadow: inset 1px 1px 0px #689324;
 }
 
